--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.16.7",
     "firebase": "^10.12.5",
     "next": "14.2.5",
+    "node": "^18.17.0",
     "openai": "^4.55.7",
     "react": "^18",
     "react-dom": "^18",
